# mcp-myguides

./: GEMINI.md  INTENT.md  PLAN.md  README.md  __main__.py  guides.yaml  main.py  package-lock.json  pyproject.toml  test.py
.gemini/: PLAN.md
guides/: python-style-guide.md
src/: tools.py
src/config/: settings.py
src/core/: models.py
src/mcp_myguides/: main.py
src/mcp_myguides/config/: __init__.py  settings.py
src/mcp_myguides/core/: models.py
src/mcp_myguides/guides/: guides.yaml  sample_guide_1.md
src/mcp_myguides/guides/git/: _overview.md  commit_messages.md  gitignore.md  guides.yaml  merging.md  setup.md  troubleshooting.md  workflow.md
src/mcp_myguides/guides/monorepo/: _overview.md  dev.md  quality.md  setup.md
src/mcp_myguides/guides/python/: _overview.md  docs.md  environment management.md  general.md  guides.yaml  libraries.md  overview.md  security.md  source_code_standards.md  testing.md  testing_e2e_playwright.md
src/mcp_myguides/server/: __init__.py  components_guides.py  server.py  tool_health.py
src/mcp_myguides/services/: guide_repository.py
src/mcp_myguides/utils/: logging.py
src/server/: __init__.py  components_guides.py  server.py  tool_health.py
src/services/: guide_loader.py  guide_repository.py
temp/: test.py
tests/: conftest.py  test_app.py  test_app_integration.py  test_app_tool_content_by_tags.py  test_app_tool_content_by_topic.py  test_app_tool_health.py  test_app_tool_list_guides.py  test_guide_repository_paths.py  test_guides.py  test_mcp_server.py
tests/test_data/: guides.yaml  sample_guide_1.md
tests/test_data/subfolder/: guides.yaml  sub_guide.md
