[project]
name = "mcp-myguides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "pyyaml",
    "httpx",
    "pytest",
    "pydantic",
    "pytest-asyncio>=1.1.0",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
mcp-myguides-server = "main:start"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["setuptools>=61.0"] # Ensure setuptools is the backend
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This tells setuptools to treat the current directory (project root)
# as a package, making 'main.py' discoverable as 'main' module.
packages = ["."]

