[project]
name = "mcp-myguides"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "pyyaml",
    "httpx",
    "pytest",
    "pydantic",
    "pytest-asyncio>=1.1.0",
    "pydantic-settings>=2.10.1",
]

[tool.pytest.ini_options]
pythonpath = "."

[project.scripts]
mcp-myguides-server = "main:start"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
