[project]
name = "mcp-myguides"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "pyyaml",
    "httpx",
    "pytest",
    "pydantic",
    "pytest-asyncio>=1.1.0",
    "pydantic-settings>=2.10.1",
]

[tool.pytest.ini_options]
pythonpath = "."

[project.scripts]
mcp-myguides-server = "mcp_myguides.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_myguides"]